  * allow viewvc-install to work when templates-contrib is absent
  * minor template improvements/corrections
  * expose revision metadata in diff view (issue #431)
  * markup file/directory item property URLs and email addresses (issue #434)
  * make ViewVC cross copies in Subversion history by default
  * fix bug that caused standalone.py failure under Python 1.5.2 (issue #442)

Version 1.1.2 (released 11-Aug-2009)

  * security fix: validate the 'view' parameter to avoid XSS attack
  * security fix: avoid printing illegal parameter names and values
  * add optional support for character encoding detection (issue #400)
  * fix username case handling in svnauthz module (issue #419)
  * fix cvsdbadmin/svnadmin rebuild error on missing repos (issue #420)
  * don't drop leading blank lines from colorized file contents (issue #422)
  * add file.ezt template logic for optionally hiding binary file contents

Version 1.1.1 (released 03-Jun-2009)

  * fix broken query form (missing required template variables) (issue #416)
  * fix bug in cvsdb which caused rebuild operations to lose data (issue #417)
  * fix cvsdb purge/rebuild repos lookup to error on missing repos
  * fix misleading file contents view page title

Version 1.1.0 (released 13-May-2009)

  * add support for full content diffs (issue #153)
  * make many more data dictionary items available to all views
  * various rcsparse and tparse module fixes
  * add daemon mode to standalone.py (issue #235)
  * rework helper application configuration options (issues #229, #62)
  * teach standalone.py to recognize Subversion repositories via -r option
  * now interpret relative paths in "viewvc.conf" as relative to that file
  * add 'purge' subcommand to cvsdbadmin and svndbadmin (issue #271)
  * fix orphaned data bug in cvsdbadmin/svndbadmin rebuild (issue #271)
  * add support for query by log message (issues #22, #121)
  * fix bug parsing 'svn blame' output with too-long author names (issue #221)